rust/test/former/all/vector_without_parameter.rs

use former::Former;

struct Vec
{
}

#[derive( Former )]
pub struct Struct1
{
  pub string_slice_1 : Vec<>,
}

fn main()
{
}
